tests/cases/conformance/decorators/invalid/decoratorOnTypeAlias.ts
declare function dec<T>(target: T): T;

@dec
type T = number;